[gd_scene load_steps=4 format=3 uid="uid://doiy8sc58g8s0"]

[ext_resource type="Texture2D" uid="uid://dofvwvtyaj1pv" path="res://Assets/Characters/RixaVihu.png" id="2_60mm6"]
[ext_resource type="Script" path="res://Scripts/rixa.gd" id="2_kgmih"]
[ext_resource type="Texture2D" uid="uid://ceigau1fq1fk2" path="res://Assets/Projectiles/JÃ¶tunn.png" id="3_fqwm7"]

[node name="Rixa" type="Area2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
collision_layer = 8
script = ExtResource("2_kgmih")
health = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.33609, 0.316557)
texture = ExtResource("2_60mm6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(17, -166, 53, -152, 82, -131, 99, -105, 109, -72, 108, -60, 77, 55, 91, 80, 37, 161, -40, 168, -101, 140, -112, 102, -91, 49, -82, -86, -73, -121, -59, -138, -38, -151, -10, -162)

[node name="Jotunn_ase" type="Sprite2D" parent="."]
position = Vector2(-126, 122)
rotation = 0.0247967
scale = Vector2(0.158849, 0.155117)
texture = ExtResource("3_fqwm7")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Muzzletun" type="Marker2D" parent="."]
position = Vector2(-262, 108)
rotation = 1.56826

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
